[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/img/Barra y slot/default_inventory_background.png" type="Texture" id=1]
[ext_resource path="res://scripts/Slot.gd" type="Script" id=2]
[ext_resource path="res://scripts/Historial.gd" type="Script" id=3]
[ext_resource path="res://assets/img/Barra y slot/Stats_Bar.png" type="Texture" id=4]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 18, 18 )

[node name="Historial" type="Node2D"]
modulate = Color( 1, 1, 1, 0.784314 )
position = Vector2( 560, 1016 )
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1080.0
margin_bottom = 80.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="palabra1" type="GridContainer" parent="."]
margin_left = 13.0
margin_top = 9.0
margin_right = 185.0
margin_bottom = 28.0
custom_constants/hseparation = 2
columns = 8
__meta__ = {
"_edit_group_": true
}

[node name="slot" type="Panel" parent="palabra1"]
margin_right = 18.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="slot2" type="Panel" parent="palabra1"]
margin_left = 20.0
margin_right = 38.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="slot3" type="Panel" parent="palabra1"]
margin_left = 40.0
margin_right = 58.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="slot4" type="Panel" parent="palabra1"]
margin_left = 60.0
margin_right = 78.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="slot5" type="Panel" parent="palabra1"]
margin_left = 80.0
margin_right = 98.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="slot6" type="Panel" parent="palabra1"]
margin_left = 100.0
margin_right = 118.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="slot7" type="Panel" parent="palabra1"]
margin_left = 120.0
margin_right = 138.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="slot8" type="Panel" parent="palabra1"]
margin_left = 140.0
margin_right = 158.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="palabra2" type="GridContainer" parent="."]
margin_left = 190.0
margin_top = 9.0
margin_right = 362.0
margin_bottom = 28.0
custom_constants/hseparation = 2
columns = 8
__meta__ = {
"_edit_group_": true
}

[node name="slot" type="Panel" parent="palabra2"]
margin_right = 18.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="slot2" type="Panel" parent="palabra2"]
margin_left = 20.0
margin_right = 38.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="slot3" type="Panel" parent="palabra2"]
margin_left = 40.0
margin_right = 58.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="slot4" type="Panel" parent="palabra2"]
margin_left = 60.0
margin_right = 78.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="slot5" type="Panel" parent="palabra2"]
margin_left = 80.0
margin_right = 98.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="slot6" type="Panel" parent="palabra2"]
margin_left = 100.0
margin_right = 118.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="slot7" type="Panel" parent="palabra2"]
margin_left = 120.0
margin_right = 138.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="slot8" type="Panel" parent="palabra2"]
margin_left = 140.0
margin_right = 158.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="palabra3" type="GridContainer" parent="."]
margin_left = 369.0
margin_top = 9.0
margin_right = 541.0
margin_bottom = 28.0
custom_constants/hseparation = 2
columns = 8
__meta__ = {
"_edit_group_": true
}

[node name="slot" type="Panel" parent="palabra3"]
margin_right = 18.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="slot2" type="Panel" parent="palabra3"]
margin_left = 20.0
margin_right = 38.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="slot3" type="Panel" parent="palabra3"]
margin_left = 40.0
margin_right = 58.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="slot4" type="Panel" parent="palabra3"]
margin_left = 60.0
margin_right = 78.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="slot5" type="Panel" parent="palabra3"]
margin_left = 80.0
margin_right = 98.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="slot6" type="Panel" parent="palabra3"]
margin_left = 100.0
margin_right = 118.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="slot7" type="Panel" parent="palabra3"]
margin_left = 120.0
margin_right = 138.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )

[node name="slot8" type="Panel" parent="palabra3"]
margin_left = 140.0
margin_right = 158.0
margin_bottom = 18.0
rect_min_size = Vector2( 18, 18 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
